glf90w.h

extern int const glf90w_key_escape;
extern int const glf90w_key_enter;
extern int const glf90w_key_tab;
extern int const glf90w_key_backspace;
extern int const glf90w_key_insert;
extern int const glf90w_key_delete;
extern int const glf90w_key_right;
extern int const glf90w_key_left;
extern int const glf90w_key_down;
extern int const glf90w_key_up;
extern int const glf90w_key_page_up;
extern int const glf90w_key_page_down;
extern int const glf90w_key_home;
extern int const glf90w_key_end;
extern int const glf90w_key_caps_lock;
extern int const glf90w_key_scroll_lock;
extern int const glf90w_key_num_lock;
extern int const glf90w_key_print_screen;
extern int const glf90w_key_pause;
extern int const glf90w_key_f1;
extern int const glf90w_key_f2;
extern int const glf90w_key_f3;
extern int const glf90w_key_f4;
extern int const glf90w_key_f5;
extern int const glf90w_key_f6;
extern int const glf90w_key_f7;
extern int const glf90w_key_f8;
extern int const glf90w_key_f9;
extern int const glf90w_key_f10;
extern int const glf90w_key_f11;
extern int const glf90w_key_f12;
extern int const glf90w_key_f13;
extern int const glf90w_key_f14;
extern int const glf90w_key_f15;
extern int const glf90w_key_f16;
extern int const glf90w_key_f17;
extern int const glf90w_key_f18;
extern int const glf90w_key_f19;
extern int const glf90w_key_f20;
extern int const glf90w_key_f21;
extern int const glf90w_key_f22;
extern int const glf90w_key_f23;
extern int const glf90w_key_f24;
extern int const glf90w_key_f25;
extern int const glf90w_key_kp_0;
extern int const glf90w_key_kp_1;
extern int const glf90w_key_kp_2;
extern int const glf90w_key_kp_3;
extern int const glf90w_key_kp_4;
extern int const glf90w_key_kp_5;
extern int const glf90w_key_kp_6;
extern int const glf90w_key_kp_7;
extern int const glf90w_key_kp_8;
extern int const glf90w_key_kp_9;
extern int const glf90w_key_kp_decimal;
extern int const glf90w_key_kp_divide;
extern int const glf90w_key_kp_multiply;
extern int const glf90w_key_kp_subtract;
extern int const glf90w_key_kp_add;
extern int const glf90w_key_kp_enter;
extern int const glf90w_key_kp_equal;
extern int const glf90w_key_left_shift;
extern int const glf90w_key_left_control;
extern int const glf90w_key_left_alt;
extern int const glf90w_key_left_super;
extern int const glf90w_key_right_shift;
extern int const glf90w_key_right_control;
extern int const glf90w_key_right_alt;
extern int const glf90w_key_right_super;
extern int const glf90w_key_menu;
extern int const glf90w_key_last;
extern int const glf90w_mod_shift;
extern int const glf90w_mod_control;
extern int const glf90w_mod_alt;
extern int const glf90w_mod_super;
extern int const glf90w_mod_caps_lock;
extern int const glf90w_mod_num_lock;