glf90w_constants.f90


    integer(c_int), bind(C, name="glf90w_key_escape"),                     public :: GLFW_KEY_ESCAPE
    integer(c_int), bind(C, name="glf90w_key_enter"),                      public :: GLFW_KEY_ENTER
    integer(c_int), bind(C, name="glf90w_key_tab"),                        public :: GLFW_KEY_TAB
    integer(c_int), bind(C, name="glf90w_key_backspace"),                  public :: GLFW_KEY_BACKSPACE
    integer(c_int), bind(C, name="glf90w_key_insert"),                     public :: GLFW_KEY_INSERT
    integer(c_int), bind(C, name="glf90w_key_delete"),                     public :: GLFW_KEY_DELETE
    integer(c_int), bind(C, name="glf90w_key_right"),                      public :: GLFW_KEY_RIGHT
    integer(c_int), bind(C, name="glf90w_key_left"),                       public :: GLFW_KEY_LEFT
    integer(c_int), bind(C, name="glf90w_key_down"),                       public :: GLFW_KEY_DOWN
    integer(c_int), bind(C, name="glf90w_key_up"),                         public :: GLFW_KEY_UP
    integer(c_int), bind(C, name="glf90w_key_page_up"),                    public :: GLFW_KEY_PAGE_UP
    integer(c_int), bind(C, name="glf90w_key_page_down"),                  public :: GLFW_KEY_PAGE_DOWN
    integer(c_int), bind(C, name="glf90w_key_home"),                       public :: GLFW_KEY_HOME
    integer(c_int), bind(C, name="glf90w_key_end"),                        public :: GLFW_KEY_END
    integer(c_int), bind(C, name="glf90w_key_caps_lock"),                  public :: GLFW_KEY_CAPS_LOCK
    integer(c_int), bind(C, name="glf90w_key_scroll_lock"),                public :: GLFW_KEY_SCROLL_LOCK
    integer(c_int), bind(C, name="glf90w_key_num_lock"),                   public :: GLFW_KEY_NUM_LOCK
    integer(c_int), bind(C, name="glf90w_key_print_screen"),               public :: GLFW_KEY_PRINT_SCREEN
    integer(c_int), bind(C, name="glf90w_key_pause"),                      public :: GLFW_KEY_PAUSE
    integer(c_int), bind(C, name="glf90w_key_f1"),                         public :: GLFW_KEY_F1
    integer(c_int), bind(C, name="glf90w_key_f2"),                         public :: GLFW_KEY_F2
    integer(c_int), bind(C, name="glf90w_key_f3"),                         public :: GLFW_KEY_F3
    integer(c_int), bind(C, name="glf90w_key_f4"),                         public :: GLFW_KEY_F4
    integer(c_int), bind(C, name="glf90w_key_f5"),                         public :: GLFW_KEY_F5
    integer(c_int), bind(C, name="glf90w_key_f6"),                         public :: GLFW_KEY_F6
    integer(c_int), bind(C, name="glf90w_key_f7"),                         public :: GLFW_KEY_F7
    integer(c_int), bind(C, name="glf90w_key_f8"),                         public :: GLFW_KEY_F8
    integer(c_int), bind(C, name="glf90w_key_f9"),                         public :: GLFW_KEY_F9
    integer(c_int), bind(C, name="glf90w_key_f10"),                        public :: GLFW_KEY_F10
    integer(c_int), bind(C, name="glf90w_key_f11"),                        public :: GLFW_KEY_F11
    integer(c_int), bind(C, name="glf90w_key_f12"),                        public :: GLFW_KEY_F12
    integer(c_int), bind(C, name="glf90w_key_f13"),                        public :: GLFW_KEY_F13
    integer(c_int), bind(C, name="glf90w_key_f14"),                        public :: GLFW_KEY_F14
    integer(c_int), bind(C, name="glf90w_key_f15"),                        public :: GLFW_KEY_F15
    integer(c_int), bind(C, name="glf90w_key_f16"),                        public :: GLFW_KEY_F16
    integer(c_int), bind(C, name="glf90w_key_f17"),                        public :: GLFW_KEY_F17
    integer(c_int), bind(C, name="glf90w_key_f18"),                        public :: GLFW_KEY_F18
    integer(c_int), bind(C, name="glf90w_key_f19"),                        public :: GLFW_KEY_F19
    integer(c_int), bind(C, name="glf90w_key_f20"),                        public :: GLFW_KEY_F20
    integer(c_int), bind(C, name="glf90w_key_f21"),                        public :: GLFW_KEY_F21
    integer(c_int), bind(C, name="glf90w_key_f22"),                        public :: GLFW_KEY_F22
    integer(c_int), bind(C, name="glf90w_key_f23"),                        public :: GLFW_KEY_F23
    integer(c_int), bind(C, name="glf90w_key_f24"),                        public :: GLFW_KEY_F24
    integer(c_int), bind(C, name="glf90w_key_f25"),                        public :: GLFW_KEY_F25
    integer(c_int), bind(C, name="glf90w_key_kp_0"),                       public :: GLFW_KEY_KP_0
    integer(c_int), bind(C, name="glf90w_key_kp_1"),                       public :: GLFW_KEY_KP_1
    integer(c_int), bind(C, name="glf90w_key_kp_2"),                       public :: GLFW_KEY_KP_2
    integer(c_int), bind(C, name="glf90w_key_kp_3"),                       public :: GLFW_KEY_KP_3
    integer(c_int), bind(C, name="glf90w_key_kp_4"),                       public :: GLFW_KEY_KP_4
    integer(c_int), bind(C, name="glf90w_key_kp_5"),                       public :: GLFW_KEY_KP_5
    integer(c_int), bind(C, name="glf90w_key_kp_6"),                       public :: GLFW_KEY_KP_6
    integer(c_int), bind(C, name="glf90w_key_kp_7"),                       public :: GLFW_KEY_KP_7
    integer(c_int), bind(C, name="glf90w_key_kp_8"),                       public :: GLFW_KEY_KP_8
    integer(c_int), bind(C, name="glf90w_key_kp_9"),                       public :: GLFW_KEY_KP_9
    integer(c_int), bind(C, name="glf90w_key_kp_decimal"),                 public :: GLFW_KEY_KP_DECIMAL
    integer(c_int), bind(C, name="glf90w_key_kp_divide"),                  public :: GLFW_KEY_KP_DIVIDE
    integer(c_int), bind(C, name="glf90w_key_kp_multiply"),                public :: GLFW_KEY_KP_MULTIPLY
    integer(c_int), bind(C, name="glf90w_key_kp_subtract"),                public :: GLFW_KEY_KP_SUBTRACT
    integer(c_int), bind(C, name="glf90w_key_kp_add"),                     public :: GLFW_KEY_KP_ADD
    integer(c_int), bind(C, name="glf90w_key_kp_enter"),                   public :: GLFW_KEY_KP_ENTER
    integer(c_int), bind(C, name="glf90w_key_kp_equal"),                   public :: GLFW_KEY_KP_EQUAL
    integer(c_int), bind(C, name="glf90w_key_left_shift"),                 public :: GLFW_KEY_LEFT_SHIFT
    integer(c_int), bind(C, name="glf90w_key_left_control"),               public :: GLFW_KEY_LEFT_CONTROL
    integer(c_int), bind(C, name="glf90w_key_left_alt"),                   public :: GLFW_KEY_LEFT_ALT
    integer(c_int), bind(C, name="glf90w_key_left_super"),                 public :: GLFW_KEY_LEFT_SUPER
    integer(c_int), bind(C, name="glf90w_key_right_shift"),                public :: GLFW_KEY_RIGHT_SHIFT
    integer(c_int), bind(C, name="glf90w_key_right_control"),              public :: GLFW_KEY_RIGHT_CONTROL
    integer(c_int), bind(C, name="glf90w_key_right_alt"),                  public :: GLFW_KEY_RIGHT_ALT
    integer(c_int), bind(C, name="glf90w_key_right_super"),                public :: GLFW_KEY_RIGHT_SUPER
    integer(c_int), bind(C, name="glf90w_key_menu"),                       public :: GLFW_KEY_MENU

    integer(c_int), bind(C, name="glf90w_key_last"),                       public :: GLFW_KEY_LAST

    integer(c_int), bind(C, name="glf90w_mod_shift"),                      public :: GLFW_MOD_SHIFT
    integer(c_int), bind(C, name="glf90w_mod_control"),                    public :: GLFW_MOD_CONTROL
    integer(c_int), bind(C, name="glf90w_mod_alt"),                        public :: GLFW_MOD_ALT
    integer(c_int), bind(C, name="glf90w_mod_super"),                      public :: GLFW_MOD_SUPER
    integer(c_int), bind(C, name="glf90w_mod_caps_lock"),                  public :: GLFW_MOD_CAPS_LOCK
    integer(c_int), bind(C, name="glf90w_mod_num_lock"),                   public :: GLFW_MOD_NUM_LOCK
